test/corpus/attributes.txt
================================================================================
attribute with literal
================================================================================

foo = "bar"

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (quoted_template
        (quoted_template_start)
        (template_literal)
        (quoted_template_end)))))

================================================================================
attribute with variable
================================================================================

foo = bar

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (identifier))))
