test/corpus/collections.txt
================================================================================
simple tuple
================================================================================

foo = [1, 2, "foo"]

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (tuple
        (numeric_lit)
        (numeric_lit)
        (string_lit
          (quoted_template_start)
          (template_literal)
          (quoted_template_end))))))

================================================================================
multiline tuple
================================================================================

foo = [
  1,
  2,
  "foo"
]

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (tuple
        (numeric_lit)
        (numeric_lit)
        (string_lit
          (quoted_template_start)
          (template_literal)
          (quoted_template_end))))))

================================================================================
empty tuple
================================================================================

foo = []

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (tuple))))

================================================================================
multiline empty tuple
================================================================================

foo = [
]

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (tuple))))

================================================================================
object
================================================================================

foo = {1: 2, "foo"="bar"}

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (object
        (object_elem
          (numeric_lit)
          (numeric_lit))
        (object_elem
          (string_lit
            (quoted_template_start)
            (template_literal)
            (quoted_template_end))
          (string_lit
            (quoted_template_start)
            (template_literal)
            (quoted_template_end)))))))

================================================================================
multiline object
================================================================================

foo = {
  1: 2,
  "foo"="bar"
}

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (object
        (object_elem
          (numeric_lit)
          (numeric_lit))
        (object_elem
          (string_lit
            (quoted_template_start)
            (template_literal)
            (quoted_template_end))
          (string_lit
            (quoted_template_start)
            (template_literal)
            (quoted_template_end)))))))

================================================================================
empty object
================================================================================

foo = { }

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (object))))

================================================================================
multiline empty object
================================================================================

foo = {
}

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (object))))

================================================================================
multiline object weird newlines
================================================================================

foo = { 1: 2,
  "foo"="bar"

}

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (object
        (object_elem
          (numeric_lit)
          (numeric_lit))
        (object_elem
          (string_lit
            (quoted_template_start)
            (template_literal)
            (quoted_template_end))
          (string_lit
            (quoted_template_start)
            (template_literal)
            (quoted_template_end)))))))

================================================================================
complex object
================================================================================

foo = {
  a = "1",
  b = "2"
}

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (object
        (object_elem
          (identifier)
          (string_lit
            (quoted_template_start)
            (template_literal)
            (quoted_template_end)))
        (object_elem
          (identifier)
          (string_lit
            (quoted_template_start)
            (template_literal)
            (quoted_template_end)))))))

================================================================================
complex from real world
================================================================================

worker_groups = [
    {
      name                          = "jasonb-test-group-1"
      instance_type                 = "t2.small"
      asg_desired_capacity          = 2
      additional_security_group_ids = [aws_security_group.external_connection.id]
    },
    {
      name                          = "jasonb-test-group-2"
      instance_type                 = "t2.medium"
      additional_security_group_ids = [aws_security_group.external_connection.id]
      asg_desired_capacity          = 1
    },
  ]

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (tuple
        (object
          (object_elem
            (identifier)
            (string_lit
              (quoted_template_start)
              (template_literal)
              (quoted_template_end)))
          (object_elem
            (identifier)
            (string_lit
              (quoted_template_start)
              (template_literal)
              (quoted_template_end)))
          (object_elem
            (identifier)
            (numeric_lit))
          (object_elem
            (identifier)
            (tuple
              (get_attr
                (get_attr
                  (identifier)
                  (identifier))
                (identifier)))))
        (object
          (object_elem
            (identifier)
            (string_lit
              (quoted_template_start)
              (template_literal)
              (quoted_template_end)))
          (object_elem
            (identifier)
            (string_lit
              (quoted_template_start)
              (template_literal)
              (quoted_template_end)))
          (object_elem
            (identifier)
            (tuple
              (get_attr
                (get_attr
                  (identifier)
                  (identifier))
                (identifier))))
          (object_elem
            (identifier)
            (numeric_lit)))))))
