test/corpus/conditionals.txt
================================================================================
simple conditional expression
================================================================================

foo = predicate() ? 1 : 2

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (conditional
        (function_call
          (identifier))
        (numeric_lit)
        (numeric_lit)))))

================================================================================
nested conditional expression expression
================================================================================

foo = ( true ? false : true ) ? "yes" : "no"

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (conditional
        (parenthesized_expression
          (conditional
            (bool_lit)
            (bool_lit)
            (bool_lit)))
        (quoted_template
          (quoted_template_start)
          (template_literal)
          (quoted_template_end))
        (quoted_template
          (quoted_template_start)
          (template_literal)
          (quoted_template_end))))))

================================================================================
nested conditional expression expression without parentheses
================================================================================

foo =  true ? false : true  ? "yes" : "no"

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (conditional
        (conditional
          (bool_lit)
          (bool_lit)
          (bool_lit))
        (quoted_template
          (quoted_template_start)
          (template_literal)
          (quoted_template_end))
        (quoted_template
          (quoted_template_start)
          (template_literal)
          (quoted_template_end))))))
