test/corpus/json.txt
================================================================================
top level object
================================================================================

{
  "foo": "bar"
}

--------------------------------------------------------------------------------

(config_file
  (object
    (object_elem
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end))
      (string_lit
        (quoted_template_start)
        (template_literal)
        (quoted_template_end)))))
