test/corpus/literals.txt
================================================================================
numeric literal hex
:cst
================================================================================

pi = 0x314F

--------------------------------------------------------------------------------

0:0  - 2:0    config_file
1:0  - 1:11     body
1:0  - 1:11       attributes: attribute
1:0  - 1:2          name: identifier `pi`
1:3  - 1:4          "="
1:5  - 1:11         value: numeric_lit `0x314F`

================================================================================
numeric literal zero
:cst
================================================================================

pi = 0

--------------------------------------------------------------------------------

0:0 - 2:0   config_file
1:0 - 1:6     body
1:0 - 1:6       attributes: attribute
1:0 - 1:2         name: identifier `pi`
1:3 - 1:4         "="
1:5 - 1:6         value: numeric_lit `0`

================================================================================
numeric literal single digit integer
:cst
================================================================================

pi = 3

--------------------------------------------------------------------------------

0:0 - 2:0   config_file
1:0 - 1:6     body
1:0 - 1:6       attributes: attribute
1:0 - 1:2         name: identifier `pi`
1:3 - 1:4         "="
1:5 - 1:6         value: numeric_lit `3`

================================================================================
numeric literal multi-digit integer
:cst
================================================================================

pi = 123

--------------------------------------------------------------------------------

0:0 - 2:0   config_file
1:0 - 1:8     body
1:0 - 1:8       attributes: attribute
1:0 - 1:2         name: identifier `pi`
1:3 - 1:4         "="
1:5 - 1:8         value: numeric_lit `123`

================================================================================
numeric literal integer with leading zero
:cst
================================================================================

pi = 007

--------------------------------------------------------------------------------

0:0 - 2:0   config_file
1:0 - 1:8     body
1:0 - 1:8       attributes: attribute
1:0 - 1:2         name: identifier `pi`
1:3 - 1:4         "="
1:5 - 1:8         value: numeric_lit `007`

================================================================================
numeric literal decimal
:cst
================================================================================

pi = 3.14

--------------------------------------------------------------------------------

0:0 - 2:0   config_file
1:0 - 1:9     body
1:0 - 1:9       attributes: attribute
1:0 - 1:2         name: identifier `pi`
1:3 - 1:4         "="
1:5 - 1:9         value: numeric_lit `3.14`

================================================================================
numeric literal decimal mantissa with positive signed exponent lowercase e
:cst
================================================================================

big_pi = 3.14e+10

--------------------------------------------------------------------------------

0:0  - 2:0    config_file
1:0  - 1:17     body
1:0  - 1:17       attributes: attribute
1:0  - 1:6          name: identifier `big_pi`
1:7  - 1:8          "="
1:9  - 1:17         value: numeric_lit `3.14e+10`

================================================================================
numeric literal decimal mantissa with positive signed exponent uppercase E
:cst
================================================================================

big_pi = 3.14E+10

--------------------------------------------------------------------------------

0:0  - 2:0    config_file
1:0  - 1:17     body
1:0  - 1:17       attributes: attribute
1:0  - 1:6          name: identifier `big_pi`
1:7  - 1:8          "="
1:9  - 1:17         value: numeric_lit `3.14E+10`

================================================================================
numeric literal decimal mantissa with negative signed exponent lowercase e
:cst
================================================================================

small_pi = 3.14e-10

--------------------------------------------------------------------------------

0:0  - 2:0    config_file
1:0  - 1:19     body
1:0  - 1:19       attributes: attribute
1:0  - 1:8          name: identifier `small_pi`
1:9  - 1:10         "="
1:11 - 1:19         value: numeric_lit `3.14e-10`

================================================================================
numeric literal decimal mantissa with negative signed exponent uppercase E
:cst
================================================================================

small_pi = 3.14E-10

--------------------------------------------------------------------------------

0:0  - 2:0    config_file
1:0  - 1:19     body
1:0  - 1:19       attributes: attribute
1:0  - 1:8          name: identifier `small_pi`
1:9  - 1:10         "="
1:11 - 1:19         value: numeric_lit `3.14E-10`

================================================================================
numeric literal decimal mantissa with unsigned exponent
:cst
================================================================================

pi = 3.14e2

--------------------------------------------------------------------------------

0:0  - 2:0    config_file
1:0  - 1:11     body
1:0  - 1:11       attributes: attribute
1:0  - 1:2          name: identifier `pi`
1:3  - 1:4          "="
1:5  - 1:11         value: numeric_lit `3.14e2`

================================================================================
numeric literal integer mantissa with unsigned exponent lowercase e
:cst
================================================================================

pi = 1e2

--------------------------------------------------------------------------------

0:0 - 2:0   config_file
1:0 - 1:8     body
1:0 - 1:8       attributes: attribute
1:0 - 1:2         name: identifier `pi`
1:3 - 1:4         "="
1:5 - 1:8         value: numeric_lit `1e2`

================================================================================
numeric literal integer mantissa with unsigned exponent uppercase E
:cst
================================================================================

pi = 1E2

--------------------------------------------------------------------------------

0:0 - 2:0   config_file
1:0 - 1:8     body
1:0 - 1:8       attributes: attribute
1:0 - 1:2         name: identifier `pi`
1:3 - 1:4         "="
1:5 - 1:8         value: numeric_lit `1E2`

================================================================================
numeric literal integer mantissa with positive signed exponent
:cst
================================================================================

pi = 1e+10

--------------------------------------------------------------------------------

0:0  - 2:0    config_file
1:0  - 1:10     body
1:0  - 1:10       attributes: attribute
1:0  - 1:2          name: identifier `pi`
1:3  - 1:4          "="
1:5  - 1:10         value: numeric_lit `1e+10`

================================================================================
numeric literal integer mantissa with negative signed exponent
:cst
================================================================================

pi = 1e-10

--------------------------------------------------------------------------------

0:0  - 2:0    config_file
1:0  - 1:10     body
1:0  - 1:10       attributes: attribute
1:0  - 1:2          name: identifier `pi`
1:3  - 1:4          "="
1:5  - 1:10         value: numeric_lit `1e-10`

================================================================================
numeric literal followed by attribute access with no attribute name
:cst
================================================================================

pi = 1.

--------------------------------------------------------------------------------

0:0 - 2:0   •config_file
1:0 - 2:0     •body
1:0 - 2:0       attributes: •attribute
1:0 - 1:2          name: identifier `pi`
1:3 - 1:4          "="
1:5 - 2:0         value: •get_attr
1:5 - 1:6            object: numeric_lit `1`
1:6 - 1:7            "."
2:0 - 2:0           attribute: •identifier

================================================================================
bool literal true
================================================================================

foo = true

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (bool_lit))))

================================================================================
bool literal false
================================================================================

foo = false

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (bool_lit))))

================================================================================
null literal
================================================================================

foo = null

--------------------------------------------------------------------------------

(config_file
  (body
    (attribute
      (identifier)
      (null_lit))))
